# Paralayout

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  Contributing.md  Gemfile  MODULE.bazel  Package.swift  Paralayout.podspec  README.md  WORKSPACE.bazel  WORKSPACE.bzlmod
.github/workflows/: ci.yml
Example/: Podfile
Example/ParalayoutDemo/: AppDelegate.swift  RootViewController.swift  SceneDelegate.swift
Example/ParalayoutDemo.xcodeproj/: project.pbxproj
Example/ParalayoutDemo.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Example/ParalayoutDemo.xcodeproj/xcshareddata/xcschemes/: Paralayout.xcscheme  ParalayoutDemo.xcscheme
Example/ParalayoutDemo.xcworkspace/: contents.xcworkspacedata
Example/ParalayoutSnapshotTests/: SnapshotTestCase.swift  ViewAlignmentSnapshotTests.swift  ViewDistributionSnapshotTests.swift  ViewSpreadingSnapshotTests.swift
Example/ParalayoutTVDemo/: AppDelegate.swift  ViewController.swift
Example/ParalayoutVisionDemo/: ContentView.swift  ParalayoutVisionDemoApp.swift  UIKitContentView.swift
Paralayout/: Alignable.swift  Angle.swift  AspectRatio.swift  GeometryAdditions.swift  Hairline.swift  Interpolation.swift  Label.swift  LayoutDirection.swift  Paralayout.h  ParalayoutLog.swift  PixelRounding.swift  Position.swift  UIDeviceAdditions.swift  UIFont+CapInsets.swift  UIFontAdditions.swift  UIImageView+Sizing.swift  UILabel+Alignment.swift  UILabel+Distribution.swift  UIView+Alignment.swift  UIView+AlignmentConveniences.swift  UIView+Distribution.swift  UIView+Frame.swift  UIView+Sizing.swift  UIView+Spreading.swift  UIViewAdditions_Alignment.swift  UIViewAdditions_Distribution.swift  UIViewAdditions_Sizing.swift  ViewArrayBuilder.swift  ViewDistributionAxis.swift  ViewDistributionBuilder.swift  ViewDistributionItem.swift
Paralayout.xcodeproj/: project.pbxproj
Paralayout.xcodeproj/xcshareddata/xcschemes/: Paralayout.xcscheme  ParalayoutStudio.xcscheme
ParalayoutStudio/: AppDelegate.swift  SampleView.swift  ViewController.swift
ParalayoutStudio/Base.lproj/: Main.storyboard
ParalayoutTests/: AngleTests.swift  AspectRatioTests.swift  CombinationTesting.swift  DistributionTests.swift  GeometryAdditionsTests.swift  HairlineTests.swift  InterpolationTests.swift  LabelTests.swift  PixelRoundingTests.swift  PositionTests.swift  ScaleFactorProvider.swift  TestSamples.swift  UIViewFrameTests.swift  UIViewSizingTests.swift  ViewArrayBuilderTests.swift  ViewDistributionBuilderTests.swift
Scripts/: build.swift
Scripts/github/: prepare-simulators.sh
