load(
    "@rules_apple//apple:ios.bzl",
    "ios_framework",
    "ios_unit_test",
)
load(
    "@rules_swift//swift:swift.bzl",
    "swift_library",
)

swift_library(
    name = "Paralayout.lib",
    srcs = glob(["Paralayout/**/*.swift"]),
    module_name = "Paralayout",
    copts = ["-strict-concurrency=complete"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [],
)

swift_library(
    name = "ParalayoutTests.lib",
    testonly = True,
    srcs = glob(["ParalayoutTests/**/*.swift"]),
    module_name = "ParalayoutTests",
    copts = ["-strict-concurrency=complete"],
    tags = ["manual"],
    deps = [":Paralayout.lib"],
)

ios_framework(
    name = "Paralayout",
    bundle_id = "com.squareup.Paralayout",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Paralayout/Info.plist"],
    minimum_os_version = "13.0",
    visibility = ["//visibility:public"],
    deps = [":Paralayout.lib"],
)

ios_unit_test(
    name = "ParalayoutTests",
    bundle_name = "ParalayoutTests",
    minimum_os_version = "13.0",
    runner = "@rules_apple//apple/testing/default_runner:ios_xctestrun_ordered_runner",
    deps = [":ParalayoutTests.lib"],
)
