"""Defines the Bazel module."""

module(
    name = "paralayout",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(
    name = "apple_support",
    version = "1.11.1",
)
bazel_dep(
    name = "rules_apple",
    version = "3.1.1",
)
bazel_dep(
    name = "rules_swift",
    version = "1.14.0",
)

apple_cc_configure = use_extension("@apple_support//crosstool:setup.bzl", "apple_cc_configure_extension")
use_repo(apple_cc_configure, "local_config_apple_cc")
